# NepsisAI

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  README.md  STRUCTURE.md  V0.3.0_RELEASE_NOTES.md  pyproject.toml
benchmarks/: streaming_latency.py  streaming_latency_ollama.py
docs/: ARCHITECTURE.md  EXAMPLES.md  OLLAMA_SETUP.md  QUICK_START.md  ROADMAP.md  THEORY.md
examples/: 01_simple_reasoning.py  02_red_channel.py  03_iterative_reasoning.py  04_hickam_multi_cause.py  05_streaming_constraint.py  06_ollama_local.py
nepsis/: __init__.py
nepsis/channels/: __init__.py  blue.py  red.py
nepsis/control/: __init__.py  collapse.py  lyapunov.py
nepsis/core/: __init__.py  config.py  contradiction.py  exclusivity_builder.py  interpretant.py  kernel.py  types.py  utils.py
nepsis/strategies/: __init__.py  base.py
nepsis/stream/: __init__.py  api.py  async_governor.py  constraint_map.py  metrics_output.py  stream_adapter.py  token_buffer.py  token_features.py
nepsis/utils/: __init__.py  logging.py  math.py
policies/: stream_general.yaml
scripts/: run_examples.sh
tests/: __init__.py  test_basic.py  test_exclusivity.py  test_hickam_collapse.py  test_semantic_features.py  test_streaming.py
