[project]
name = "nepsisai"
version = "0.3.0"
description = "Medical-grade reasoning architecture for non-ergodic decision-making"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Trenten Don Thorn", email = "your.email@example.com"}
]
keywords = ["reasoning", "AI", "non-ergodic", "bayesian", "semiotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
stream = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
enterprise = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nepsisai"
Documentation = "https://github.com/yourusername/nepsisai/blob/main/docs"
Repository = "https://github.com/yourusername/nepsisai"
Issues = "https://github.com/yourusername/nepsisai/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
